<resources>
    <string name="app_name">android-base-homeworks</string>
    <string name="btn_1">BTN 1</string>
    <string name="btn_2">BTN 2</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="terms">Terms</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="hello_again">Hello again</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="password_ahort">password is very short</string>
    <string name="successfull">Successfull</string>
    <string name="wrong_login">Wrong login</string>

    <string name="country">Country</string>
    <string name="lesson_3_homework">lesson 3 homeWork</string>
    <string name="trms">Terms</string>
    <string name="hellow_agein">Hello again</string>
    <string name="lesson_4_homework">lesson 4 homeWork</string>
    <string name="show_dynamic_gui">Show dynamic GUI</string>
    <string name="show_other_tasks">Show other tasks</string>
    <string name="show_sign_in_activity">Show Sign In Activity</string>
    <string name="selected_color">selected color</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="_128">128</string>

    <string name="open_color_picker">Open color picker</string>
    <string name="color_picker_task">color picker task</string>
    <string name="_255">255</string>
    <string name="lesson_5_homework">lesson 5 homeWork</string>
    <string name="array_adapter_and_lifecle">Array adapter and Lifecycle</string>
    <string name="lesson_6_custom_array_adapter">lesson 6 custom Array Adapter</string>
    <string name="logo_image">Logo image</string>
    <string name="name">Name</string>
    <string name="lesson_7_practice">Lesson 7 practice</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="book_logo">book logo</string>
    <string name="add">add</string>bui
    <string name="signup">SignUp</string>
    <string name="forgot">forgot</string>
    <string name="lesson_9_practice">lesson_9_practice</string>
    <string name="lesson_10_practice">lesson_10_practice</string>
    <string name="lesson_12_dialog_fragment">lesson_12_Dialog Fragment</string>
    <string name="lesson_12_dialogfragment">Lesson 12_DialogFragment</string>
    <string name="lesson13">Lesson 13</string>
    <string name="title_activity_lesson15">Lesson15</string>

</resources>
