<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    tools:context="com.example.vladimirbabenko.android_base_homeworks.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:baselineAligned="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:weightSum="10">

            <view
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <view
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:background="@android:color/white" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:textColorHint="@color/colorTvHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"

            android:textColorHint="@color/colorTvHint" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorButtonLogin"
            android:text="@string/log_in"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvFogotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_your_password"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:text="@string/terms"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </FrameLayout>


</LinearLayout>
