<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vladimirbabenko.android_base_homeworks.lesson4.ColorPickerRezultActivity">

    <ImageView

        android:contentDescription="@string/selected_color"
        android:id="@+id/ivRezultViewRez"
        android:layout_width="233dp"
        android:layout_height="181dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRezultViewRez">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/r"
            android:textColor="@color/ColorPickerRed"
            android:textSize="48sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/g"
            android:textColor="@color/ColorPickerGreen"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/b"
            android:textColor="@color/ColorPickerBlue"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tvRedRezult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/_128"
            android:textColor="@color/ColorPickerRed"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tvGreenRezult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/_128"
            android:textColor="@color/ColorPickerGreen"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tvBlueRezult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/_128"
            android:textColor="@color/ColorPickerBlue"
            android:textSize="48sp" />

    </GridLayout>

    <Button
        android:id="@+id/btnOpenColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/open_color_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        android:layout_marginBottom="36dp"/>

</android.support.constraint.ConstraintLayout>
