<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    tools:context="com.example.vladimirbabenko.android_base_homeworks.MainActivityHomeWorkScreen"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hello_again"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_using"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:weightSum="11"
            >

            <Button
                android:id="@+id/btGoogleSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/colorGoogleRed"
                android:drawableStart="@drawable/google_plus"

                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btFacebookSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@color/colorFacebookBlue"
                android:drawableStart="@drawable/facebook"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:baselineAligned="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:weightSum="12"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@android:color/white"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@android:color/white"
                />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                />

        </android.support.design.widget.TextInputLayout>

        <!--It's possible to use android:inputType="numberPassword" -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:textColor="@color/colorWhite"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorButtonLogin"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/tvFogotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_your_password"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flLowerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/btTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:gravity="end|center_vertical"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:text="@string/terms"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

    </FrameLayout>

</LinearLayout>
