<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    tools:context="com.example.vladimirbabenko.android_base_homeworks.lesson7_practice.LogoActivity"

    >


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/embarcadero_delphi_logo" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="18sp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"

            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="18sp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"

            />
    </LinearLayout>


    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/login"


        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:text="SignUp"
            android:textColor="@color/colorWhite"
            android:textSize="9sp" />

        <Button

            android:id="@+id/btForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:text="forgot"
            android:textColor="@color/colorWhite"
            android:textSize="9sp" />

    </FrameLayout>

</LinearLayout>
